corpus/cpp/exception_handling/case-01/snapshots/gcc15/dual_sink_structured/render.verbose.txt
error: [exception_handling] exception handling configuration or usage error @ src/main.cpp:2:11
help: enable -fexceptions/-frtti or adjust the exception specification
raw : exception handling disabled, use '[-fexceptions](https://gcc.gnu.org/onlinedocs/gcc-15.2.0/gcc/Code-Gen-Options.html#index-fexceptions)' to enable
| src/main.cpp:2:11
|     throw 1;
|           ^
debug: rule_id=rule.family.exception_handling.message_terms
debug: matched_conditions=message_contains=exception handling disabled, phase=semantic
other errors:
  - src/main.cpp:2:11: error: exception handling configuration or usage error
details: --formed-explain | raw: --formed-raw